Publication links and fixed Feed list overflow

--- a/src/components/Publication/Publication.scss
+++ b/src/components/Publication/Publication.scss
@@ -45,6 +45,12 @@
 
     &-link {
       font-weight: $font-bold;
+      color: $main-red;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
 
       &.user {
         color: $primary-color;
